Bug 118296 - Color at tools > options > gridlines cannot be reverted
Summary: Color at tools > options > gridlines cannot be reverted
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Calc (show other bugs)
Version:
(earliest affected)
unspecified
Hardware: All All
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:6.2.0 target:6.1.0.1
Keywords:
Depends on:
Blocks:
 
Reported: 2018-06-21 08:34 UTC by Heiko Tietze
Modified: 2018-06-25 13:49 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:
Regression By:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Heiko Tietze 2018-06-21 08:34:59 UTC
When changing the tools > options > calc > view > visual aids > color from "Grid color" (some grayish color) to something else like Light Gray 4 it cannot be reverted since "Grid color" is not available on any palette. What we can do is to change the default to Light Gray 3 or to add the Grid color to the libreoffice palette, for example.
Comment 1 Regina Henschel 2018-06-21 11:13:15 UTC
(In reply to Heiko Tietze from comment #0)
> "Grid color" (some grayish color)

The color is COL_LIGHTGRAY (=c0c0c0), defined in https://opengrok.libreoffice.org/xref/core/include/tools/color.hxx#250. This is set as default in https://opengrok.libreoffice.org/xref/core/sc/inc/viewopti.hxx and called SC_STD_GRIDCOLOR in core. 

The string "Grid color" belongs to the strings, which are localized. It is named STR_GRIDCOLOR in core.

Default setting: If the color "c0c0c0" is contained in the current color palette of Calc, then the color name from that palette is shown; if the color is not contained, the localized version of STR_GRIDCOLOR is shown. Test it: Start with a new user profile. Start with new Calc document and switch to palette HTML there. Go to the options dialog tab. Now you see "Silver".

I can confirm your observation, that there is no UI way back to string "Grid Color". That is, because the registrymodifications.xcu gets an item "gridlinecolor" if the user has selected a different grid color. And sometimes the grid color is entered in UserColors, even without touching the grid color.
 
But my suggestion is different: I would not add it to any palette. But I would prefer an option in the dialog, to set the default color. An item "default" above the color palette selection for example, similar to other dialogs, which have an item "automatic" at that place. That would solve the problem, that the user does not know which color is the default one.
Comment 2 Heiko Tietze 2018-06-22 08:36:00 UTC
(In reply to Regina Henschel from comment #1)
> But I would prefer an option in the dialog, to set the default color.

This "Factory setting" would be a special solution as it is not used anywhere else, needed at many places unless we revert everything, and a bit confusing because we do have Reset (which reverts only the current situation).

Not saying it's a bad option but kind of overkill for one color name.
Comment 3 Maxim Monastirsky 2018-06-22 11:02:26 UTC
I support Regina's idea of having an "Automatic" (or "Default") button *inside* the floating color widget. We already have this solution in several places, so I don't see any problem having it here too.

Some examples:
1. Tools > Options > LibreOffice > Application Colors.
2. Form > Push Button, draw the button and right click on it > Control... > Background Color.
Comment 4 Maxim Monastirsky 2018-06-23 23:19:23 UTC
(In reply to Maxim Monastirsky from comment #3)
I submitted this now as a patch to gerrit:

https://gerrit.libreoffice.org/56344
Comment 5 Commit Notification 2018-06-25 06:37:59 UTC
Maxim Monastirsky committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=364c828e6ea9e78a145a4ec32a677c7539a913a9

tdf#118296 Grid line color cannot be reverted

It will be available in 6.2.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 6 Heiko Tietze 2018-06-25 06:39:45 UTC
(In reply to Maxim Monastirsky from comment #4)
> https://gerrit.libreoffice.org/56344

Now we have "Automatic" as the default and this option is also present in the color picker allowing to revert changes. Thanks Maxim!
Comment 7 Commit Notification 2018-06-25 13:49:26 UTC
Maxim Monastirsky committed a patch related to this issue.
It has been pushed to "libreoffice-6-1":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=56a68f70ec8ddf8a452732e51828f877ed49999c&h=libreoffice-6-1

tdf#118296 Grid line color cannot be reverted

It will be available in 6.1.0.1.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.