tdf#118296 Grid line color cannot be reverted

Use same approach as in Tools > Options... > LibreOffice >
Application Colors.

Change-Id: I5061709222cde2591e2937cdd67bbb5b6ad7f3f8
Reviewed-on: https://gerrit.libreoffice.org/56344
Tested-by: Jenkins
Reviewed-by: Heiko Tietze <tietze.heiko@gmail.com>
Tested-by: Heiko Tietze <tietze.heiko@gmail.com>
(cherry picked from commit 364c828e6ea9e78a145a4ec32a677c7539a913a9)
Reviewed-on: https://gerrit.libreoffice.org/56383
Reviewed-by: Maxim Monastirsky <momonasmon@gmail.com>