sc/source/core/tool/viewopti.cxx
@@ -130,7 +130,6 @@ void ScViewOptions::SetDefaults()
     aModeArr[VOBJ_TYPE_DRAW ] = VOBJ_MODE_SHOW;
 
     aGridCol     = SC_STD_GRIDCOLOR;
-    aGridColName = ScResId( STR_GRIDCOLOR );
 
     aGridOpt.SetDefaults();
 }
